# netcf

./: .dir-locals.el  .gitignore  AUTHORS  Makefile.am  Makefile.maint  NEWS  bootstrap.conf  cfg.mk  configure.ac  mingw32-netcf.spec.in  netcf.spec.in
data/xml/: interface.rng  redhat-get.xsl  redhat-put.xsl  suse-get.xsl  suse-put.xsl  util-get.xsl
doc/: announce.txt
gnulib/lib/: Makefile.am
src/: Makefile.am  drv_debian.c  drv_mswindows.c  drv_redhat.c  drv_suse.c  dutil.c  dutil.h  dutil_linux.c  dutil_linux.h  dutil_posix.c  dutil_posix.h  internal.h  list.h  ncftool.c  ncftransform.c  netcf-transaction.init.in  netcf-transaction.service.in  netcf-transaction.sh.in  netcf.c  netcf.h  ref.h  try  xslt_ext.c
tests/: Makefile.am  cutest.c  cutest.h  test-debian.c  test-redhat.c  test-suse.c  tutil.c  tutil.h
tests/interface/: bridge-multi-all.xml  bridge-multi.xml  ethernet-dhcp.xml
tests/redhat/fsroot/etc/sysconfig/network-scripts/: ifcfg-br1  ifcfg-br2
tests/redhat/schema/: bond-arp.xml  bond.xml  bridge-bond.xml  bridge-multi-all.xml  bridge-multi.xml  ipv6-dhcp.xml  ipv6-static-multi.xml
tests/suse/schema/: bond-defaults.xml  ipv6-autoconf-dhcp.xml  ipv6-autoconf.xml  ipv6-local.xml  ipv6-static-multi.xml  ipv6-static.xml
